--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dancing_script"
-                    android:text="hello there,"
+                    android:hint="Recipe Name"
                     android:textColor="#116530"
                     android:textFontWeight="800"
                     android:textSize="35sp" />
@@ -83,21 +83,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dancing_script"
-                    android:text="what you want to cook today?"
+                    android:hint="Recipe Description"
                     android:textColor="#C0C0C0"
                     android:textSize="25sp"
                     android:layout_below="@id/tvName" />
 
                 <TextView
                     android:id="@+id/tvPrepTime"
+                    style="@style/nomralDrawable"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tvDescription"
-                    android:layout_marginTop="30dp"
                     android:layout_marginStart="10dp"
-                    app:drawableStartCompat="@drawable/ic_clock2"
-                    android:text="45 mins"
-                    style="@style/nomralDrawable" />
+                    android:layout_marginTop="30dp"
+                    android:hint=" -- hrs"
+                    app:drawableStartCompat="@drawable/ic_clock2" />
 
                 <TextView
                     android:id="@+id/tvCalories"
@@ -108,7 +108,7 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginStart="50dp"
                     app:drawableStartCompat="@drawable/ic_calories"
-                    android:text="100 kcal"
+                    android:hint="-- cals"
                     style="@style/nomralDrawable" />
 
                 <TextView
@@ -121,7 +121,7 @@
                     android:layout_toEndOf="@id/tvCalories"
                     android:drawablePadding="5dp"
                     android:fontFamily="@font/roboto_bold"
-                    android:text="4.0"
+                    android:hint="Rating"
                     android:textColor="@color/mikado_yellow"
                     android:drawableRight="@drawable/ic_star"
                     style="@style/nomralDrawable"/>
@@ -143,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/courgette"
-                    android:text="Ingredients"
+                    android:hint="List ingredients..."
                     android:textColor="@color/dark_blue"
                     android:textSize="20sp"
                     android:layout_marginTop="10dp"
@@ -165,7 +165,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/courgette"
-                    android:text="Steps"
+                    android:hint="List steps..."
                     android:textColor="@color/dark_blue"
                     android:textSize="20sp"
                     android:layout_marginTop="10dp"
