--- a/app/src/main/res/layout/layout_add_recipe.xml
+++ b/app/src/main/res/layout/layout_add_recipe.xml
@@ -63,7 +63,7 @@
             android:id="@+id/txtRec_Time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Preperation Time" />
+            android:hint="Preperation Time (Hours)" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
