--- a/app/src/main/res/layout/layout_recipe.xml
+++ b/app/src/main/res/layout/layout_recipe.xml
@@ -39,11 +39,13 @@
             android:layout_toEndOf="@id/ivRecipeImage"
             android:fontFamily="@font/roboto_bold"
             android:textColor="@color/black"
+            android:hint="Recipe Name"
             android:textSize="17sp" />
 
         <!--Text VIew to display Recipe Desccription-->
         <TextView
             android:id="@+id/tvDescription"
+            android:hint="Description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvRecipeName"
@@ -62,7 +64,8 @@
             android:layout_toEndOf="@id/ivRecipeImage"
             android:drawablePadding="5dp"
             android:fontFamily="@font/roboto_light"
-            app:drawableStartCompat="@drawable/ic_clock" />
+            app:drawableStartCompat="@drawable/ic_clock"
+            android:hint="-- hrs"/>
 
         <TextView
             android:id="@+id/tvRating"
@@ -74,7 +77,7 @@
             android:layout_toEndOf="@id/tvPrepTime"
             android:drawablePadding="5dp"
             android:fontFamily="@font/roboto_bold"
-            android:text="4.0"
+            android:hint="--"
             android:textColor="@color/mikado_yellow"
             android:drawableRight="@drawable/ic_star"/>
 
