--- a/app/src/main/res/layout/layout_add_recipe.xml
+++ b/app/src/main/res/layout/layout_add_recipe.xml
@@ -76,6 +76,22 @@
         android:layout_marginBottom="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtRec_cal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Calories (cal)" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtRec_Ingr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
