Squashed commit of the following:
commit 385d3cd96a754c5233018aeec0119229cfe7e158
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Mon May 2 01:30:28 2022 -0700

    remove bad code

commit c0411db6d860c19f2017dbd94c9f74d2112a8169
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Mon May 2 00:40:41 2022 -0700

    Google maps merging

commit cf96c55d61546419268df9381089c80e92ffaa20
Merge: 9f00f30 78bd804
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Mon May 2 00:04:42 2022 -0700

    Merge branch 'origin/bry-modify-recipe' into jeremiah-maps-merge

commit 78bd8042c01d74a8e8e5ab666951f0af1e63ed36
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 23:57:55 2022 -0700

    Profile update

commit 9f00f30a78f869c742f43be10faebd605c8992fb
Author: Jeremiah Tassinari <jtassinari10@gmail.com>
Date:   Sun May 1 23:42:15 2022 -0700

    black screen profile other

commit 811e8668bb5de64aa58b316259522ee0223f5943
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 23:40:26 2022 -0700

    Remove other profile

commit 235e802f90764af8d6c19e75a91990dd38503967
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 23:35:14 2022 -0700

    Small fixes

commit 8694afe5bf78462a8ca05143bedeadb6db01cc02
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 21:31:43 2022 -0700

    Added calories attribute to recipe

commit 03ca88ce3a7980a6414c385280198ab97f6291d6
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 21:01:45 2022 -0700

    Update recipe headers and displays

commit ba3cd8ca291b16eb7b27bb097e2bbcba9eeb8e7d
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 20:09:22 2022 -0700

    Added modify functionality for recipes

commit 4266859d9d6f2699944a8ecc0aebae97971e0cb7
Author: Bryann12349 <bryan.nguyen12349@gmail.com>
Date:   Sun May 1 18:58:36 2022 -0700

    Route recipe details to edit recipe

commit bd7dbcce7c23dadc5637ffccb05ca13c9e06953a
Author: Je

--- a/app/src/main/res/layout/edit_profile_button.xml
+++ b/app/src/main/res/layout/edit_profile_button.xml
@@ -16,10 +16,26 @@
         android:fontFamily="@font/roboto_bold"
         android:textColor="@color/black"
         android:textSize="25sp" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editProfile_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Username"
+            android:maxLength="25"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -33,7 +49,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -47,21 +63,21 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfile_username"
+            android:id="@+id/editProfileBio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"/>
+            android:hint="About you"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -69,12 +85,14 @@
             android:id="@+id/editProfile_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"/>
+            android:hint="Phone Number"
+            android:maxLength="10"/>
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -85,10 +103,11 @@
             android:hint="Address"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -96,7 +115,22 @@
             android:id="@+id/editProfile_zip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Zipcode" />
+            android:hint="Zipcode"
+            android:maxLength="5"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_height="57dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editProfile_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="City"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -106,12 +140,20 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfileBio"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="About you"/>
+            android:layout_height="match_parent"
+            android:text="Select a state"
+            android:textStyle="bold">
+        </TextView>
+        <Spinner
+            android:background="@color/gray_gainsboro"
+            android:id="@+id/editProfile_state"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
     </com.google.android.material.textfield.TextInputLayout>
+
     <!--button for dismissing our dialog-->
     <Button
         android:id="@+id/btnSubmitProfile"
