Revert "Squashed commit of the following:"
This reverts commit d9c99eb1b893ac70ebe00f550b1258d1a5a067b9.

--- a/app/src/main/res/layout/edit_profile_button.xml
+++ b/app/src/main/res/layout/edit_profile_button.xml
@@ -16,26 +16,10 @@
         android:fontFamily="@font/roboto_bold"
         android:textColor="@color/black"
         android:textSize="25sp" />
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfile_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Username"
-            android:maxLength="25"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -49,7 +33,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -63,21 +47,21 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfileBio"
+            android:id="@+id/editProfile_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="About you"/>
+            android:hint="Username"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -85,14 +69,12 @@
             android:id="@+id/editProfile_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"
-            android:maxLength="10"/>
+            android:hint="Phone Number"/>
     </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -103,11 +85,10 @@
             android:hint="Address"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
@@ -115,22 +96,7 @@
             android:id="@+id/editProfile_zip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Zipcode"
-            android:maxLength="5"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="57dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editProfile_city"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="City"/>
+            android:hint="Zipcode" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -140,20 +106,12 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp">
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editProfileBio"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Select a state"
-            android:textStyle="bold">
-        </TextView>
-        <Spinner
-            android:background="@color/gray_gainsboro"
-            android:id="@+id/editProfile_state"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="wrap_content"
+            android:hint="About you"/>
     </com.google.android.material.textfield.TextInputLayout>
-
     <!--button for dismissing our dialog-->
     <Button
         android:id="@+id/btnSubmitProfile"
