--- a/app/src/main/res/drawable/ic_chat.xml
+++ b/app/src/main/res/drawable/ic_chat.xml
@@ -1,9 +1,10 @@
-<vector android:height="32dp"
-    android:viewportHeight="58"
-    android:viewportWidth="58"
-    android:width="32dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:tint="@color/white">
-    <path android:fillColor="@color/white"
-        android:pathData="M29,1.5c-16.016,0 -29,11.641 -29,26c0,5.292 1.768,10.211 4.796,14.318C4.398,46.563 3.254,53.246 0,56.5c0,0 9.943,-1.395 16.677,-5.462c0.007,0.003 0.015,0.006 0.022,0.009c2.764,-1.801 5.532,-3.656 6.105,-4.126c0.3,-0.421 0.879,-0.548 1.33,-0.277c0.296,0.178 0.483,0.503 0.489,0.848c0.01,0.622 -0.005,0.784 -5.585,4.421C22.146,52.933 25.498,53.5 29,53.5c16.016,0 29,-11.641 29,-26S45.016,1.5 29,1.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@color/white"
+      android:pathData="M464,512a48,48 0,1 0,96 0,48 48,0 1,0 -96,0zM664,512a48,48 0,1 0,96 0,48 48,0 1,0 -96,0zM264,512a48,48 0,1 0,96 0,48 48,0 1,0 -96,0zM925.2,338.4c-22.6,-53.7 -55,-101.9 -96.3,-143.3a444.35,444.35 0,0 0,-143.3 -96.3C630.6,75.7 572.2,64 512,64h-2c-60.6,0.3 -119.3,12.3 -174.5,35.9a445.35,445.35 0,0 0,-142 96.5c-40.9,41.3 -73,89.3 -95.2,142.8 -23,55.4 -34.6,114.3 -34.3,174.9A449.4,449.4 0,0 0,112 714v152a46,46 0,0 0,46 46h152.1A449.4,449.4 0,0 0,510 960h2.1c59.9,0 118,-11.6 172.7,-34.3a444.48,444.48 0,0 0,142.8 -95.2c41.3,-40.9 73.8,-88.7 96.5,-142 23.6,-55.2 35.6,-113.9 35.9,-174.5 0.3,-60.9 -11.5,-120 -34.8,-175.6zM774.1,776.4C704,845.8 611,884 512,884h-1.7c-60.3,-0.3 -120.2,-15.3 -173.1,-43.5l-8.4,-4.5L188,836L188,695.2l-4.5,-8.4C155.3,633.9 140.3,574 140,513.7c-0.4,-99.7 37.7,-193.3 107.6,-263.8 69.8,-70.5 163.1,-109.5 262.8,-109.9h1.7c50,0 98.5,9.7 144.2,28.9 44.6,18.7 84.6,45.6 119,80 34.3,34.3 61.3,74.4 80,119 19.4,46.2 29.1,95.2 28.9,145.8 -0.6,99.6 -39.7,192.9 -110.1,262.7z"/>
 </vector>
