--- a/app/src/main/res/layout/layout_add_recipe.xml
+++ b/app/src/main/res/layout/layout_add_recipe.xml
@@ -63,23 +63,7 @@
             android:id="@+id/txtRec_Time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Preperation Time (Hours)" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtRec_cal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Calories (cal)" />
+            android:hint="Preperation Time" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
