--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -18,34 +18,49 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtFullName"
             style="@style/profileTextView"
             android:enabled="false"
-            android:layout_marginTop="10dp"
-            android:hint="Enter your full name"/>
+            android:text="Bob the Minion"
+            android:layout_marginTop="10dp" />
 
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtPhone"
             style="@style/profileTextView"
             android:enabled="false"
-            android:hint="Enter your phone number"
+            android:text="(123) - 456 - 7890"
             android:layout_below="@id/txtFullName" />
 
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtAddress"
             style="@style/profileTextView"
             android:layout_below="@id/txtPhone"
             android:enabled="false"
-            android:hint="Enter your address" />
+            android:text="1250 Bellflower Blvd, Long Beach, CA 90840" />
 
-        <TextView
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtBio"
             style="@style/profileTextView"
             android:enabled="false"
-            android:hint="Tell us about yourself"
+            android:text="I'm 5ft. I love Banana"
             android:layout_below="@id/txtAddress"
             android:layout_marginBottom="10dp"/>
+
+
     </RelativeLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnEditProfile"
+        app:fabSize="mini"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/black"
+        app:backgroundTint="@color/mikado_yellow"
+        app:srcCompat="@drawable/ic_edit_pencil"
+        app:borderWidth="3dp"
+        android:layout_gravity="end"
+        app:maxImageSize="18dp"
+        app:tint="@color/mikado_yellow"/>
 
 </com.google.android.material.card.MaterialCardView>
