Recipe UI text change

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -18,7 +18,7 @@
             android:layout_marginStart="20sp"
             android:fontFamily="@font/dancing_script"
             android:paddingTop="20sp"
-            android:text="hello there,"
+            android:text="Recipes"
             android:textColor="#116530"
             android:textFontWeight="600"
             android:textSize="35sp"
@@ -33,7 +33,7 @@
             android:layout_marginStart="20sp"
             android:fontFamily="@font/roboto_light"
             android:textStyle="bold"
-            android:text="what you want to cook today?"
+            android:text="What do you want to cook today?"
             android:textColor="#C0C0C0"
             android:letterSpacing="0.05"
             android:textSize="18sp"
