--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -91,7 +91,9 @@
                 android:background="@null"
                 android:backgroundTint="@color/black"
                 android:padding="10dp"
-                android:src="@drawable/ic_chat" />
+                android:src="@drawable/ic_chat"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
